# manga-image-translator

./: README.md  pyproject.toml  translate_demo.py  ui.html  web_main.py
