[tool.poetry]
name = "manga-image-translator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GLP-3.0"

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.6.2"
torch = "^1.9.0"
torchvision = "^0.10.0"
einops = "^0.3.2"
scikit-image = "^0.18.3"
opencv-python = "^4.5.3"
pyclipper = "^1.3.0"
Shapely = "^1.7.1"
requests = "^2.26.0"
oscrypto = "^1.2.1"
freetype-py = "^2.2.0"
googletrans = "4.0.0rc1"
aiohttp = "^3.7.4"
tqdm = "^4.62.2"
sklearn = "^0.0"
Cython = "^0.29.24"
pydensecrf = {git = "https://github.com/lucasb-eyer/pydensecrf.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
